--- a/.github/workflows/azurefunctionspipeline.yml
+++ b/.github/workflows/azurefunctionspipeline.yml
@@ -35,4 +35,4 @@ jobs:
       uses: actions/upload-artifact@v3.1.0
       with:
         name: AzFunction
-        path: ../azfunction/
+        path: azfunction/
