--- a/.github/workflows/azurefunctionspipeline.yml
+++ b/.github/workflows/azurefunctionspipeline.yml
@@ -15,6 +15,9 @@ on:
       - "ServerlessFacesAnalyzer.IaC/**"
       - ".github/**"
 
+env: 
+  FUNCTION_APP_NAME: "sfav22hocxrikc5m-func"
+
 jobs:
   build:
 
@@ -39,3 +42,19 @@ jobs:
       with:
         name: AzFunction
         path: ServerlessFacesAnalyzer.Functions/publish
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v3.0.0
+      with:
+        name: AzFunction
+    - name: Azure Functions Action
+      uses: Azure/functions-action@v1.4.7
+      with:
+        app-name: ${{ env.FUNCTION_APP_NAME }}
+        package: AzFunction
+        publish-profile: ${{ env.FUNCTION_APP_PUBLISH_PROFILE }}
+        
