--- a/.github/workflows/azurefunctionspipeline.yml
+++ b/.github/workflows/azurefunctionspipeline.yml
@@ -53,9 +53,10 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
       with:
-        name: AzFunction
-        path: ServerlessFacesAnalyzer.Functions/publish
-
+        name: build_artifacts
+        path: ${{ env.BUILD_OUTPUT_PATH }}
+        if-no-files-found: error
+        
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -63,12 +64,15 @@ jobs:
     - name: Download a Build Artifact
       uses: actions/download-artifact@v3.0.0
       with:
-        name: AzFunction
+       	name: build_artifacts
+        path: ${{ env.BUILD_OUTPUT_PATH }}
+    
     - name: Display structure of downloaded files
       run: ls -R
+    
     - name: Azure Functions Action
       uses: Azure/functions-action@v1.4.7
       with:
         app-name: ${{ env.FUNCTION_APP_NAME }}
-        package: AzFunction
+        package: ${{ env.BUILD_OUTPUT_PATH }}/${{ env.BUILD_PACKAGE_NAME }}
         publish-profile: ${{ env.FUNCTION_APP_PUBLISH_PROFILE }}
