--- a/.github/workflows/iacpipeline.yml
+++ b/.github/workflows/iacpipeline.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Azure Login
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: ${{ secrets.AZURE_CREDENTIAL }}
       
       - name: Deploy ARM Template
         run: |
