--- a/.github/workflows/iacpipeline.yml
+++ b/.github/workflows/iacpipeline.yml
@@ -67,4 +67,4 @@ jobs:
       - name: Deploy ARM Template
         run: |
           cd ${{ env.BUILD_OUTPUT_PATH }} 
-          az deployment sub create --location ${{ env.DEPLOY_LOCATION }} --template-file main.json --name iacpipeline --parameters environmentName=${{ env.ENVIRONMENT_NAME }}
+          az deployment sub create --location ${{ env.DEPLOY_LOCATION }} --template-file main.json 
