--- a/ServerlessFacesAnalyzer.Cognitive/ServerlessFacesAnalyzer.Cognitive.csproj
+++ b/ServerlessFacesAnalyzer.Cognitive/ServerlessFacesAnalyzer.Cognitive.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.ComputerVision" Version="7.0.1" />
+    <PackageReference Include="Azure.AI.Vision.Common" Version="0.15.1-beta.1" />
+    <PackageReference Include="Azure.AI.Vision.ImageAnalysis" Version="1.0.0-beta.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
