--- a/ServerlessFacesAnalyzer.ImageProcessing/ServerlessFacesAnalyzer.ImageProcessing.csproj
+++ b/ServerlessFacesAnalyzer.ImageProcessing/ServerlessFacesAnalyzer.ImageProcessing.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="2.1.6" />
   </ItemGroup>
 
   <ItemGroup>
