Change function name in the pipeline

--- a/.github/workflows/azurefunctionspipeline.yml
+++ b/.github/workflows/azurefunctionspipeline.yml
@@ -18,7 +18,7 @@ on:
       - "Documentation/**"
 
 env: 
-  FUNCTION_APP_NAME: "srvlfaceanalyzer-func"
+  FUNCTION_APP_NAME: "sfawtzhervz6fj6k-func"
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '${{ github.workspace }}/ServerlessFacesAnalyzer.Functions'
   BUILD_OUTPUT_PATH: '${{ github.workspace }}/build-artifacts'
   BUILD_PACKAGE_NAME: 'az-func.zip'
