Update Azure Functions pipeline configuration
Removed path patterns for .github and Documentation.
Updated AZURE_FUNCTIONAPP_PACKAGE_PATH to reflect new
directory structure for the function app package.

--- a/.github/workflows/azurefunctionspipeline.yml
+++ b/.github/workflows/azurefunctionspipeline.yml
@@ -19,7 +19,7 @@ on:
 
 env: 
   FUNCTION_APP_NAME: "sfawtzhervz6fj6k-func"
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '${{ github.workspace }}/ServerlessFacesAnalyzer.Functions'
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '${{ github.workspace }}/ServerlessFacesAnalyzer.FuncApp'
   BUILD_OUTPUT_PATH: '${{ github.workspace }}/build-artifacts'
   BUILD_PACKAGE_NAME: 'az-func.zip'
   
