--- a/.github/workflows/azurefunctionspipeline.yml
+++ b/.github/workflows/azurefunctionspipeline.yml
@@ -72,9 +72,15 @@ jobs:
     - name: Display structure of downloaded files
       run: ls -R
     
+    - name: Login to azure 
+      uses: azure/login@v1
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
     - name: Azure Functions Action
       uses: Azure/functions-action@v1.4.7
       with:
         app-name: ${{ env.FUNCTION_APP_NAME }}
         package: ${{ env.BUILD_OUTPUT_PATH }}/${{ env.BUILD_PACKAGE_NAME }}
-        publish-profile: ${{ secrets.FUNCTION_APP_PUBLISH_PROFILE }}
